# GeoCalib-R

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
src/: main.cpp
train/: run_gtsam_full_eval.py  summarize_gtsam_metrics.py
